letterspacing, scroll index fixed

--- a/scss/components/_arrows-project.scss
+++ b/scss/components/_arrows-project.scss
@@ -68,7 +68,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 200px;
+    width: 150px;
     height: 50px;
     background-color: color.$offwhite;
     border: none;
