--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -27,6 +27,7 @@
 
 .nav-links li a {
   color: color.$blue;
+  letter-spacing: 3px;
 }
 
 .burger_container{
